--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
 body{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Oswald', sans-serif;
     margin: 0px;
 }
 /* css of introduction section */
 h1{
-   font-size: 30px;
+    font-size: 60px;
+    text-transform: uppercase;
 }
 .pink-clr{
-    color: #ec4c7a;
+    color: #FF8367;
   
+}
+.blue-clr{
+    color: #363958;
 }
 .title-name{
     font-size: 50px;
@@ -20,10 +24,13 @@ p{
 }
 
 .upper-sec{
-    background-image: url(img/header-bg.png);
-   background-size: 100%;
+   margin-top: 00px;
    height: 805px;
+   margin-bottom: 500px;
 
+}
+.upper-sec p{
+    margin-top: -30px;
 }
 a{
     text-decoration: none;
@@ -40,22 +47,25 @@ a{
        
 }
 .half-width img{
-    width: 110%;
-    margin-top: 20%;
+    width: 90%;
+    margin-top: 00px;
     
     
 }
 .left-div{
-    margin-top: 230px;
-    margin-left: 250px;
+    margin-top: 120px;
+    margin-left: 200px;
 
+}
+.right-div{
+    margin-left: 100px;
 }
 #sec-img{
    
     margin-left: 150px;
 }
 #sec-txt{
-    margin-top: 230px;
+    margin-top: 130px;
   
     margin-left: 180px;
 }
@@ -63,7 +73,7 @@ a{
 
 /* css of biography section */
 
-.biography-sec{
+biography-sec{
     background-image: url(img/biography-bg.png);
     height: 870px;
    
@@ -91,7 +101,7 @@ a{
     padding: 10px;
 }
 .box img{
-    width: 30%;
+    width: 30;
     text-align: center;
 }
 .Specializing-sec-intro{
@@ -115,10 +125,6 @@ a{
  font-size: 25px;
 }
 
-
-
-
-
 /* css of my latest work section */
 
 .my-lat-wrk img{
@@ -136,10 +142,9 @@ a{
         margin: 110px 0px 90px 0px;
 }
 .my-lat-wrk-sec{
-    background-image: url(img/latest-work-bg.png);
-    background-repeat: no-repeat;
+    
     height: 500px;
-    background-size:100% 100%; 
+    
 }
 
 
@@ -201,3 +206,81 @@ a{
     color: gray;
 }
 
+.project{
+    
+    margin: auto;
+    padding: 10px;
+    height: 600px;
+    background-color: #E5E5E5;
+    
+}
+.box{
+    width: 300px;
+    height: 320px;
+    float: left;
+    background-color:white;
+   border-radius: 15px;
+    margin:5px;
+    
+
+  
+    
+}
+.box h3,p {
+    text-align: left;
+    padding-left: 5px;
+}
+.cards{
+    width:1000px;
+    margin: 0 auto;
+   
+}
+.cards h2{
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 50px;
+    font-size:30px;
+}
+.box img{
+    
+     width: 100%;
+}
+.footer{
+    width: 60%;
+    height: 200px;
+    border: 1px solid pink;
+    border-radius: 20px;
+    margin: auto;
+    background-image: url("shapes/Group_33094_1.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin-top: 100px;
+}
+.footer-text{
+    text-transform: uppercase;
+    color: white;
+    padding:40px 50px;
+    float: left;
+    
+    
+    
+}
+.footer-btn{
+    float:right;
+    padding: 90px 50px;
+}  
+.social-icon{
+    margin: auto;
+    width: 40%;
+   
+    text-align: center;
+    line-height:10px;
+    margin-top: 50px;
+}
+.social-icon h3{
+    color: gray;
+}
+.social-icon img{
+    width:30px;
+} 
